// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter render counter  1`] = `null`;

exports[`Counter render counter ICounterSize.medium 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFF",
        "borderRadius": 36,
        "height": 72,
        "justifyContent": "center",
        "minWidth": 72,
        "position": "absolute",
        "zIndex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 48,
          "lineHeight": 60,
        },
        Object {
          "color": "#FFF",
          "paddingHorizontal": 18,
          "textAlign": "center",
        },
      ]
    }
  >
    1
  </Text>
</View>
`;

exports[`Counter render counter ICounterSize.small 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFF",
        "borderRadius": 27,
        "height": 54,
        "justifyContent": "center",
        "minWidth": 54,
        "position": "absolute",
        "zIndex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 36,
          "lineHeight": 48,
        },
        Object {
          "color": "#FFF",
          "paddingHorizontal": 12,
          "textAlign": "center",
        },
      ]
    }
  >
    12
  </Text>
</View>
`;

exports[`Counter render counter ICounterTypes.destructive 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFF",
        "borderRadius": 36,
        "height": 72,
        "justifyContent": "center",
        "minWidth": 72,
        "position": "absolute",
        "zIndex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 48,
          "lineHeight": 60,
        },
        Object {
          "color": "#F54D3D",
          "paddingHorizontal": 18,
          "textAlign": "center",
        },
      ]
    }
  >
    2
  </Text>
</View>
`;

exports[`Counter render counter ICounterTypes.disabled 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFF",
        "borderRadius": 36,
        "height": 72,
        "justifyContent": "center",
        "minWidth": 72,
        "position": "absolute",
        "zIndex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 48,
          "lineHeight": 60,
        },
        Object {
          "color": "#9BA1B0",
          "paddingHorizontal": 18,
          "textAlign": "center",
        },
      ]
    }
  >
    10
  </Text>
</View>
`;

exports[`Counter render counter ICounterTypes.primary 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFF",
        "borderRadius": 36,
        "height": 72,
        "justifyContent": "center",
        "minWidth": 72,
        "position": "absolute",
        "zIndex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 48,
          "lineHeight": 60,
        },
        Object {
          "color": "#2B78EE",
          "paddingHorizontal": 18,
          "textAlign": "center",
        },
      ]
    }
  >
    9+
  </Text>
</View>
`;

exports[`Counter render counter ICounterTypes.secondary 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFF",
        "borderRadius": 36,
        "height": 72,
        "justifyContent": "center",
        "minWidth": 72,
        "position": "absolute",
        "zIndex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 48,
          "lineHeight": 60,
        },
        Object {
          "color": "#2B78EE",
          "paddingHorizontal": 18,
          "textAlign": "center",
        },
      ]
    }
  >
    99+
  </Text>
</View>
`;

exports[`Counter render counter ICounterTypes.tertiary 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#2B78EE",
        "borderRadius": 36,
        "height": 72,
        "justifyContent": "center",
        "minWidth": 72,
        "position": "absolute",
        "zIndex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 48,
          "lineHeight": 60,
        },
        Object {
          "color": "#FFF",
          "paddingHorizontal": 18,
          "textAlign": "center",
        },
      ]
    }
  >
    10
  </Text>
</View>
`;

exports[`Counter render counter style 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFF",
        "borderRadius": 36,
        "height": 72,
        "justifyContent": "center",
        "minWidth": 72,
        "position": "absolute",
        "zIndex": 1,
      },
      Object {
        "backgroundColor": "#FFF",
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 48,
          "lineHeight": 60,
        },
        Object {
          "color": "#FFF",
          "paddingHorizontal": 18,
          "textAlign": "center",
        },
      ]
    }
  >
    20
  </Text>
</View>
`;
